# IneptWindowing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
IneptWindowing/include/: InputManagerBase.h  Window.h  WindowBase.h
IneptWindowing/include/platform/Windows/: WindowsInputManager.h  WindowsWindowBase.h
IneptWindowing/source/platform/Windows/: WindowsInputManager.cpp  WindowsWindowBase.cpp
include/input/: InputBase.h  WindowsInput.h
include/render/: Context.h  OpenGLRenderer.h  Renderer.h  RendererBase.h
include/render/OpenGL/: OpenGLContext.h
include/window/: Window.h  WindowBase.h  WindowsWindow.h
libraries/glad/src/: glad.c
source/input/: WindowsInput.cpp
source/render/OpenGL/: OpenGLContext.cpp
source/window/: WindowsWindow.cpp
